feat: stack trace + tt replay-lite (arthas simplified)